# quantum-models

./: .gitignore  LICENSE  README.md  pyproject.toml
Light-Matter/: Absorption.ipynb  Dipole-Dipole.ipynb  absorption.py  demo_constants.py  dipole.py
Light-Matter/Lorentz-model/: Untitled.ipynb  absorption.py  demo.py  demo_quantity.py  inte_demo.py
Notebooks/: QuatAssembly_Ex1.ipynb  WKB Expansion.ipynb  wkb_expansion.py
Schoedinger/: rabi.py
Schoedinger/Sinusoidally-Driven-Two-Level/: README.md  main.py  test_ivp.py
_math/: bernoulli.py  bessel.py
dmrg/: hubbard.py
exact_diagonalization/: Exact Diagonalization.md  README.md
hamiltonian/: base.py  heisenberg.py  ising.py  observables.py  operators.py  test.py  tight_binding.py
hamiltonian/base/: base.py
hamiltonian/models/: heisenberg.py  ising.py  tight_binding.py
hamiltonian/utils/: observables.py  operators.py
hamiltonian/visualization/: time_evolution.py
projects/Single_Pulse/: README.md  adiabatic_picture.py  gaussian.py  landau_zener.py  single_pulse.py
projects/applied_math/: fourier_expand.py  gamma_func.py
projects/non-hermitian/: demo_arcsin.py
projects/riemann/: c0.py  su2_invert.py
projects/su2/: semi_cl_rabi.py
projects/wkb/: numerics.py  wkb.py
quartic/: stokes.py
random_mat/: plot_wigner_surmise.py
su2/Landau_Zener/: I_R.py  evolution_demo.py  landau_zener.py  lz_adiabatic.py  lz_adiabatic_num.py  lz_magnus.py  lz_numerics.py  numerics.py  test.py  v_a.py
su2/Rosen-Zener/: magnus_1st.py  rz_numerics.py
test/: bloch.py  test_qutip.py  try.py
(+74 files in other folders)
