[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-models"
version = "0.1.0"
dependencies = [
"numpy",
"scipy",
"matplotlib",
"sympy",
"pyyaml",
"tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
